# OpenTimelineIO

./: CMakeLists.txt
contrib/opentimelineio_contrib/adapters/: advanced_authoring_format.py
src/c-opentimelineio/: CMakeLists.txt
src/c-opentimelineio/opentime-bindings/: CMakeLists.txt
src/c-opentimelineio/opentime-bindings/include/copentime/: errorStatus.h  rationalTime.h
src/c-opentimelineio/opentime-bindings/src/: errorStatus.cpp  rationalTime.cpp
src/c-opentimelineio/opentimelineio-bindings/: CMakeLists.txt
src/c-opentimelineio/opentimelineio-bindings/src/: anyDictionary.cpp  anyVector.cpp  clip.cpp  composable.cpp  composableRetainerVector.cpp  composableVector.cpp  composition.cpp  deserialization.cpp  effect.cpp  effectRetainerVector.cpp  effectVector.cpp  errorStatus.cpp  externalReference.cpp  freezeFrame.cpp  gap.cpp  generatorReference.cpp  item.cpp  linearTimeWarp.cpp  mapComposableTimeRange.cpp  marker.cpp  markerVector.cpp  (+17 more)
src/c-opentimelineio/tests/: CMakeLists.txt  OTIOClipTests.cpp  OTIOComposableTests.cpp  OTIOCompositionTests.cpp  OTIOEffectTests.cpp  OTIOGeneratorReferenceTests.cpp  OTIOItemTests.cpp  OTIOMarkerTests.cpp  OTIOMediaReferenceTests.cpp  OTIOMultithreadingTests.cpp  OTIOSerializableCollectionTests.cpp  OTIOSerializableObjectTests.cpp  OTIOStackAlgoTests.cpp  OTIOTimelineTests.cpp  OTIOTrackAlgoTests.cpp  OTIOTransitionTests.cpp  OTIOUnknownSchemaTests.cpp
src/opentimelineio/: serializableObject.cpp
src/py-opentimelineio/opentime-bindings/: CMakeLists.txt
src/py-opentimelineio/opentimelineio-bindings/: CMakeLists.txt
(+38 files in other folders)
